--- a/views/account.ejs
+++ b/views/account.ejs
@@ -18,7 +18,7 @@
     <!--nav-->
     <nav x-data="{show:false}" class="flex items-center justify-between flex-wrap bg-orange-500 p-6">
         <div class="flex items-center flex-shrink-0 text-white mr-6">
-          <span class="font-semibold text-xl tracking-tight">Hack and Snack</span>
+          <span class="font-semibold text-xl tracking-tight">Hungry For Food 🍉</span>
         </div>
         <div class="block md:hidden">
           <button @click="show=!show" class="flex items-center px-3 py-2 border rounded text-gray-100 border-gray-200 hover:text-white hover:border-white">
