--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,7 +28,7 @@
 <body>
     <nav x-data="{show:false}" class="flex items-center justify-between flex-wrap bg-orange-500 p-6">
         <div class="flex items-center flex-shrink-0 text-white mr-6">
-          <span class="font-semibold text-xl tracking-tight">Hack and Snack</span>
+          <span class="font-semibold text-xl tracking-tight">Hungry For Food 🍉</span>
         </div>
         <div class="block md:hidden">
           <button @click="show=!show" class="flex items-center px-3 py-2 border rounded text-gray-100 border-gray-200 hover:text-white hover:border-white">
@@ -44,7 +44,7 @@
         </div>
       </nav>
       <div style="text-align: center; margin-top: 20px; font-size: larger; font-weight: 600; color: orange;">
-        <h1 style="font-size:50px;">Welcome to Hack and Snack!</h1>
+        <h1 style="font-size:50px;">Welcome to Hungry For Food!</h1>
         <button id="search" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 border border-orange-700 rounded">
             Fetch Restaurants based on your location.
           </button>
